--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            height: 100vh;
+            margin: 0;
+        }
+        canvas {
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
     
