--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         body {
             height: 100vh;
             margin: 0;
+            display: flex;
+            justify-content: center;
         }
         canvas {
             height: 100%;
